--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -87,12 +87,12 @@
   <section id="seccion5" class="section">
    <h2>Responsive Tester</h2>
    <form id="responsive-tester">
-    <input name="direccion" type="url" placeholder="URL" required>
+    <input name="direccion" type="url" placeholder="URL (con https://)" required>
     <br>
     <input name="ancho" type="text" placeholder="Ancho" required>
     <br>
     <input name="alto" type="text" placeholder="Alto" required>
-    <br>
+    <br><br>
     <input name="probar" type="submit" value="Probar" class="btn btn-info">
     <input name="cerrar" type="button" value="Cerrar" class="btn btn-secondary">
     <br>
