--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -36,7 +36,7 @@
    <a href="#seccion3">Cuenta Regresiva al cumple del Coco</a>
    <a href="#seccion4">Responsive con JavaScript<br>Coco en el Rocsen</a>
    <a href="#seccion5">Responsive Tester</a>
-   <a href="#seccion6">Sección 6</a>
+   <a href="#seccion6">Detección de Dispositivos <br>User Agent</a>
    <a href="#seccion7">Sección 7</a>
    <a href="#seccion8">Sección 8</a>
    <a href="#seccion9">Sección 9</a>
@@ -100,8 +100,11 @@
   </section>
 
   <section id="seccion6" class="section">
-   <h2>Sección nº6</h2>
+   <h2>Detección de Dispositivos <br>User Agent</h2>
+   <div id="user-device">
+   </div>
   </section>
+
   <section id="seccion7" class="section">
    <h2>Sección nº7</h2>
   </section>
