--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -37,7 +37,7 @@
    <a href="#seccion4">Responsive con JavaScript<br>Coco en el Rocsen</a>
    <a href="#seccion5">Responsive Tester</a>
    <a href="#seccion6">Detección de Dispositivos <br>User Agent</a>
-   <a href="#seccion7">Sección 7</a>
+   <a href="#seccion7">Detección de la conexión</a>
    <a href="#seccion8">Sección 8</a>
    <a href="#seccion9">Sección 9</a>
    <a href="#seccion10">Sección 10</a>
@@ -106,8 +106,9 @@
   </section>
 
   <section id="seccion7" class="section">
-   <h2>Sección nº7</h2>
+   <h2>Detección de la conexión</h2>
   </section>
+
   <section id="seccion8" class="section">
    <h2>Sección nº8</h2>
   </section>
