--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -38,7 +38,7 @@
    <a href="#seccion5">Responsive Tester</a>
    <a href="#seccion6">Detección de Dispositivos <br>User Agent</a>
    <a href="#seccion7">Detección de la conexión</a>
-   <a href="#seccion8">Sección 8</a>
+   <a href="#seccion8">Detección de la Camara Web</a>
    <a href="#seccion9">Sección 9</a>
    <a href="#seccion10">Sección 10</a>
   </nav>
@@ -110,8 +110,10 @@
   </section>
 
   <section id="seccion8" class="section">
-   <h2>Sección nº8</h2>
+   <h2>Detección de la Camara Web</h2>
+   <video id="webcam"></video>
   </section>
+
   <section id="seccion9" class="section">
    <h2>Sección nº9</h2>
   </section>
