--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -39,7 +39,7 @@
    <a href="#seccion6">Detección de Dispositivos <br>User Agent</a>
    <a href="#seccion7">Detección de la conexión</a>
    <a href="#seccion8">Detección de la Camara Web</a>
-   <a href="#seccion9">Sección 9</a>
+   <a href="#seccion9">Geolocalización</a>
    <a href="#seccion10">Sección 10</a>
   </nav>
  </aside>
@@ -115,8 +115,10 @@
   </section>
 
   <section id="seccion9" class="section">
-   <h2>Sección nº9</h2>
+   <h2>Geolocalización</h2>
+   <div id="geolocation"></div>
   </section>
+
   <section id="seccion10" class="section">
    <h2>Sección nº10</h2>
   </section>
