--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -46,7 +46,7 @@
    <a href="#seccion9">Geolocalización</a>
    <a href="#seccion10">Filtros de búsquedas</a>
    <a href="#seccion11">Sorteos Digitales</a>
-   <a href="#seccion12">Sección 12</a>
+   <a href="#seccion12">Responsive Slider</a>
    <a href="#seccion13">Sección 13</a>
    <a href="#seccion14">Sección 14</a>
    <a href="#seccion15">Sección 15</a>
@@ -54,8 +54,8 @@
   </nav>
  </aside>
  <main>
-  <section id="image">
-   <img src="assets/dev-plant.jpg" alt="La planta Dev">
+  <section>
+   <img id="plantaDev" src="assets/dev-plant.jpg" alt="La planta Dev">
   </section>
   <section id="seccion1" class="section">
    <h2>Relos Digital y Alarma Sonora</h2>
@@ -196,8 +196,36 @@
  </section>
 
  <section id="seccion12" class="section">
-  <h2>Sección nº12</h2>
+  <h2>Responsive Slider</h2>
+  <div class="slider">
+   <div class="slider-slides">
+    <div class="slider-slide active">
+     <!-- la clase "active" es solo para la primera slider-slide -->
+     <img src="./assets/cocoparque.jpg" alt="Cocoloco">
+    </div>
+    <div class="slider-slide">
+     <img src="./assets/cocoparque-1.jpg" alt="Cocoloco">
+    </div>
+    <div class="slider-slide">
+     <img src="./assets/cocoparque-2.jpg" alt="Cocoloco">
+    </div>
+    <div class="slider-slide">
+     <img src="./assets/cocoparque-3.jpg" alt="Cocoloco">
+    </div>
+    <div class="slider-slide">
+     <h4>Fin de las slides</h4>
+     <p>¿No es hermoso el cocoloco?
+      Seguimos viendo las mismas fotos una y otra vez, sin cansarnos.
+     </p>
+    </div>
+   </div>
+   <div class="slider-btns">
+    <!-- botones izq: caracter especial "&laquo;" y der: "&rlaquo;"  -->
+    <a class="prev" href="#">&laquo;</a><a class="next" href="#">&raquo;</a>
+   </div>
+  </div>
  </section>
+
  <section id="seccion13" class="section">
   <h2>Sección nº13</h2>
  </section>
