Header Gris cuando offline

--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -23,7 +23,7 @@
 
 <body data-dark>
 
- <header class="header">
+ <header class="header" data-offline>
   <h4>Curso JavaScript</h4>
   <h1>Ejercicios del DOM</h1>
  </header>
@@ -213,7 +213,8 @@
      <img src="./assets/cocoparque-3.jpg" alt="Cocoloco">
     </div>
     <div class="slider-slide">
-     <h4>Fin de las slides</h4>
+     <br><br>
+     <h4>Fin de las slides</h4><br><br>
      <p>¿No es hermoso el cocoloco?
       Seguimos viendo las mismas fotos una y otra vez, sin cansarnos.
      </p>
