--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -47,7 +47,7 @@
    <a href="#seccion10">Filtros de búsquedas</a>
    <a href="#seccion11">Sorteos Digitales</a>
    <a href="#seccion12">Responsive Slider</a>
-   <a href="#seccion13">Sección 13</a>
+   <a href="#seccion13">Video Inteligente</a>
    <a href="#seccion14">Sección 14</a>
    <a href="#seccion15">Sección 15</a>
 
@@ -228,7 +228,10 @@
  </section>
 
  <section id="seccion13" class="section">
-  <h2>Sección nº13</h2>
+  <h2>Video Inteligente</h2>
+  <video src="./assets/coco.mp4" muted controls loop autoplay data-smart-video></video>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <video src="./assets/coco.mp4" muted controls loop autoplay data-smart-video></video>
  </section>
  <section id="seccion14" class="section">
   <h2>Sección nº14</h2>
