--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -35,21 +35,23 @@
  </button>
  <aside class="panel">
   <nav class="menu">
-   <a href="#seccion1">Relos Digital y Alarma Sonora</a>
-   <a href="#seccion2">Eventos del Teclado</a>
-   <a href="#seccion3">Cuenta Regresiva al cumple del Coco</a>
-   <a href="#seccion4">Responsive con JavaScript<br>Coco en el Rocsen</a>
-   <a href="#seccion5">Responsive Tester</a>
-   <a href="#seccion6">Detección de Dispositivos <br>User Agent</a>
-   <a href="#seccion7">Detección de la conexión</a>
-   <a href="#seccion8">Detección de la Camara Web</a>
-   <a href="#seccion9">Geolocalización</a>
-   <a href="#seccion10">Filtros de búsquedas</a>
-   <a href="#seccion11">Sorteos Digitales</a>
-   <a href="#seccion12">Responsive Slider</a>
-   <a href="#seccion13">Sección 13</a>
-   <a href="#seccion14">Sección 14</a>
-   <a href="#seccion15">Sección 15</a>
+   <a href="#seccion1" data-scroll-spy>Relos Digital y Alarma Sonora</a>
+   <!-- data-scroll-spy es el Data Attribute inventado por nosotros que nos permite que la función scrollSpy() detecte los enlaces del menú -->
+   <a href="#seccion2" data-scroll-spy>Eventos del Teclado</a>
+   <a href="#seccion3" data-scroll-spy>Cuenta Regresiva al cumple del Coco</a>
+   <a href="#seccion4" data-scroll-spy>Responsive con JavaScript<br>Coco en el Rocsen</a>
+   <a href="#seccion5" data-scroll-spy>Responsive Tester</a>
+   <a href="#seccion6" data-scroll-spy>Detección de Dispositivos <br>User Agent</a>
+   <a href="#seccion7" data-scroll-spy>Detección de la conexión</a>
+   <a href="#seccion8" data-scroll-spy>Detección de la Camara Web</a>
+   <a href="#seccion9" data-scroll-spy>Geolocalización</a>
+   <a href="#seccion10" data-scroll-spy>Filtros de búsquedas</a>
+   <a href="#seccion11" data-scroll-spy>Sorteos Digitales</a>
+   <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
+   <a href="#seccion13" data-scroll-spy>Sección 13</a>
+   <a href="#seccion14" data-scroll-spy>Sección 14</a>
+   <a href="#seccion15" data-scroll-spy>Sección 15</a>
+   <a href="#seccion16" data-scroll-spy>Sección 16</a>
 
   </nav>
  </aside>
@@ -57,7 +59,7 @@
   <section>
    <img id="plantaDev" src="assets/dev-plant.jpg" alt="La planta Dev">
   </section>
-  <section id="seccion1" class="section">
+  <section id="seccion1" class="section" data-scroll-spy>
    <h2>Relos Digital y Alarma Sonora</h2>
    <h4>Flor de reeelossss</h4>
 
@@ -71,7 +73,7 @@
    <div id="reloj"></div>
   </section>
 
-  <section id="seccion2" class="section">
+  <section id="seccion2" class="section" data-scroll-spy>
    <h2>Eventos del Teclado</h2>
    <article class="stage">
     <div class="ball"></div>
@@ -79,13 +81,13 @@
    <h4>Usá las flechitas del teclado para mover la pelota</h4>
   </section>
 
-  <section id="seccion3" class="section">
+  <section id="seccion3" class="section" data-scroll-spy>
    <h2>Cuenta Regresiva</h2>
    <br>
    <div id="countdown"></div>
   </section>
 
-  <section id="seccion4" class="section">
+  <section id="seccion4" class="section" data-scroll-spy>
    <h2>Responsive con JavaScript</h2>
    <br>
    <h3>El Coco en el Rocsen</h3>
@@ -94,7 +96,7 @@
    <div id="gmaps"></div>
   </section>
 
-  <section id="seccion5" class="section">
+  <section id="seccion5" class="section" data-scroll-spy>
    <h2>Responsive Tester</h2>
    <form id="responsive-tester">
     <input name="direccion" type="url" placeholder="URL (con https://)" required>
@@ -109,22 +111,22 @@
    </form>
   </section>
 
-  <section id="seccion6" class="section">
+  <section id="seccion6" class="section" data-scroll-spy>
    <h2>Detección de Dispositivos <br>User Agent</h2>
    <div id="user-device">
    </div>
   </section>
 
-  <section id="seccion7" class="section">
+  <section id="seccion7" class="section" data-scroll-spy>
    <h2>Detección de la conexión</h2>
   </section>
 
-  <section id="seccion8" class="section">
+  <section id="seccion8" class="section" data-scroll-spy>
    <h2>Detección de la Camara Web</h2>
    <video id="webcam"></video>
   </section>
 
-  <section id="seccion9" class="section">
+  <section id="seccion9" class="section" data-scroll-spy>
    <h2>Geolocalización</h2>
    <div id="geolocation"></div>
    <br>
@@ -136,7 +138,7 @@
     crossorigin=""></script>
   </section>
 
-  <section id="seccion10" class="section">
+  <section id="seccion10" class="section" data-scroll-spy>
    <h2>Filtros de búsquedas</h2>
    <input type="search" placeholder="Buscar..." class="card-filter">
 
@@ -175,70 +177,71 @@
     </figure>
    </article>
   </section>
+
+
+  <section id="seccion11" class="section" data-scroll-spy>
+   <h2>Sorteos Digitales</h2>
+   <ul class="players">
+    <li class="player">Coco</li>
+    <li class="player">Joaquín</li>
+    <li class="player">Cocoloco</li>
+    <li class="player">Coquino</li>
+    <li class="player">Cocacho</li>
+    <li class="player">Joaco</li>
+    <li class="player">Quino</li>
+    <li class="player">Pichintrún</li>
+    <li class="player">hermozo bebé</li>
+    <li class="player">Joaquín Ortega Arce</li>
+   </ul>
+   <button id="winner-btn" class="btn btn-success">¿cómo le decimos hoy?</button>
+   <div id="apodo-coco"></div>
+  </section>
+
+  <section id="seccion12" class="section" data-scroll-spy>
+   <h2>Responsive Slider</h2>
+   <div class="slider">
+    <div class="slider-slides">
+     <div class="slider-slide active">
+      <!-- la clase "active" es solo para la primera slider-slide -->
+      <img src="./assets/cocoparque.jpg" alt="Cocoloco">
+     </div>
+     <div class="slider-slide">
+      <img src="./assets/cocoparque-1.jpg" alt="Cocoloco">
+     </div>
+     <div class="slider-slide">
+      <img src="./assets/cocoparque-2.jpg" alt="Cocoloco">
+     </div>
+     <div class="slider-slide">
+      <img src="./assets/cocoparque-3.jpg" alt="Cocoloco">
+     </div>
+     <div class="slider-slide">
+      <br><br>
+      <h4>Fin de las slides</h4><br><br>
+      <p>¿No es hermoso el cocoloco?
+       Seguimos viendo las mismas fotos una y otra vez, sin cansarnos.
+      </p>
+     </div>
+    </div>
+    <div class="slider-btns">
+     <!-- botones izq: caracter especial "&laquo;" y der: "&rlaquo;"  -->
+     <a class="prev" href="#">&laquo;</a><a class="next" href="#">&raquo;</a>
+    </div>
+   </div>
+  </section>
+
+  <section id="seccion13" class="section" data-scroll-spy>
+   <h2>Sección nº13</h2>
+  </section>
+  <section id="seccion14" class="section" data-scroll-spy>
+   <h2>Sección nº14</h2>
+  </section>
+  <section id="seccion15" class="section" data-scroll-spy>
+   <h2>Sección nº15</h2>
+  </section>
+  <section id="seccion16" class="section" data-scroll-spy>
+   <h2>Sección nº16</h2>
+  </section>
  </main>
-
- <section id="seccion11" class="section">
-  <h2>Sorteos Digitales</h2>
-  <ul class="players">
-   <li class="player">Coco</li>
-   <li class="player">Joaquín</li>
-   <li class="player">Cocoloco</li>
-   <li class="player">Coquino</li>
-   <li class="player">Cocacho</li>
-   <li class="player">Joaco</li>
-   <li class="player">Quino</li>
-   <li class="player">Pichintrún</li>
-   <li class="player">hermozo bebé</li>
-   <li class="player">Joaquín Ortega Arce</li>
-  </ul>
-  <button id="winner-btn" class="btn btn-success">¿cómo le decimos hoy?</button>
-  <div id="apodo-coco"></div>
- </section>
-
- <section id="seccion12" class="section">
-  <h2>Responsive Slider</h2>
-  <div class="slider">
-   <div class="slider-slides">
-    <div class="slider-slide active">
-     <!-- la clase "active" es solo para la primera slider-slide -->
-     <img src="./assets/cocoparque.jpg" alt="Cocoloco">
-    </div>
-    <div class="slider-slide">
-     <img src="./assets/cocoparque-1.jpg" alt="Cocoloco">
-    </div>
-    <div class="slider-slide">
-     <img src="./assets/cocoparque-2.jpg" alt="Cocoloco">
-    </div>
-    <div class="slider-slide">
-     <img src="./assets/cocoparque-3.jpg" alt="Cocoloco">
-    </div>
-    <div class="slider-slide">
-     <br><br>
-     <h4>Fin de las slides</h4><br><br>
-     <p>¿No es hermoso el cocoloco?
-      Seguimos viendo las mismas fotos una y otra vez, sin cansarnos.
-     </p>
-    </div>
-   </div>
-   <div class="slider-btns">
-    <!-- botones izq: caracter especial "&laquo;" y der: "&rlaquo;"  -->
-    <a class="prev" href="#">&laquo;</a><a class="next" href="#">&raquo;</a>
-   </div>
-  </div>
- </section>
-
- <section id="seccion13" class="section">
-  <h2>Sección nº13</h2>
- </section>
- <section id="seccion14" class="section">
-  <h2>Sección nº14</h2>
- </section>
- <section id="seccion15" class="section">
-  <h2>Sección nº15</h2>
- </section>
- <section id="seccion16" class="section">
-  <h2>Sección nº16</h2>
- </section>
 
  <!-- Botón Scroll Up: Utilicé código svg dentro del botón para obtener un botón de bootstrap icons -->
  <button class="scroll-top-boton hidden">
