--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -48,7 +48,7 @@
    <a href="#seccion10" data-scroll-spy>Filtros de búsquedas</a>
    <a href="#seccion11" data-scroll-spy>Sorteos Digitales</a>
    <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
-   <a href="#seccion13" data-scroll-spy>Sección 13</a>
+   <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
    <a href="#seccion14" data-scroll-spy>Sección 14</a>
    <a href="#seccion15" data-scroll-spy>Sección 15</a>
    <a href="#seccion16" data-scroll-spy>Sección 16</a>
@@ -230,8 +230,12 @@
   </section>
 
   <section id="seccion13" class="section" data-scroll-spy>
-   <h2>Sección nº13</h2>
+   <h2>Video Inteligente</h2>
+   <video src="./assets/coco_juegos.mp4" width="100%" muted controls loop data-smart-video></video>
+   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+   <video src="./assets/coco_juegos.mp4" width="100%" muted controls loop data-smart-video></video>
   </section>
+
   <section id="seccion14" class="section" data-scroll-spy>
    <h2>Sección nº14</h2>
   </section>
