--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -49,7 +49,7 @@
    <a href="#seccion11" data-scroll-spy>Sorteos Digitales</a>
    <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
    <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
-   <a href="#seccion14" data-scroll-spy>Sección 14</a>
+   <a href="#seccion14" data-scroll-spy>Validaciones de Formularios</a>
    <a href="#seccion15" data-scroll-spy>Sección 15</a>
    <a href="#seccion16" data-scroll-spy>Sección 16</a>
 
@@ -237,8 +237,14 @@
   </section>
 
   <section id="seccion14" class="section" data-scroll-spy>
-   <h2>Sección nº14</h2>
+   <h2>Validaciones de Formularios</h2>
+   <form class="contact-form">
+    <legend>Envíanos tus comentarios</legend>
+    <input type="text" name="name" placeholder="Escribe tu nombre" title=" ">
+
+   </form>
   </section>
+
   <section id="seccion15" class="section" data-scroll-spy>
    <h2>Sección nº15</h2>
   </section>
