--- a/80-dom-ej.html
+++ b/80-dom-ej.html
@@ -50,7 +50,7 @@
    <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
    <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
    <a href="#seccion14" data-scroll-spy>Validaciones de Formularios</a>
-   <a href="#seccion15" data-scroll-spy>Sección 15</a>
+   <a href="#seccion15" data-scroll-spy>Narrador</a>
    <a href="#seccion16" data-scroll-spy>Sección 16</a>
 
   </nav>
@@ -271,8 +271,16 @@
   </section>
 
   <section id="seccion15" class="section" data-scroll-spy>
-   <h2>Sección nº15</h2>
+   <h2>Narrador</h2><br>
+   <select id="speech-select">
+    <option value=""> --- Elije una voz --- </option>
+   </select>
+   <br><br>
+   <textarea id="speech-text" cols="50" rows="5" placeholder="Ingresa texto para leerlo..."></textarea>
+   <br><br>
+   <button id="speech-btn" class="btn btn-info">Robot lee el texto por favor</button>
   </section>
+
   <section id="seccion16" class="section" data-scroll-spy>
    <h2>Sección nº16</h2>
   </section>
