--- a/ajax.html
+++ b/ajax.html
@@ -5,17 +5,44 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="css/ajax.css">
+ <!-- Fuentes google -->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link
+  href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,477&family=Noto+Sans:wght@700&family=Raleway:wght@300&display=swap"
+  rel="stylesheet">
 
  <title>AJAX - Curso JavaScript</title>
 </head>
 
 <body>
 
- <h2>Objeto XMLHttpRequest</h2>
- <ol id="xhr"></ol>
+ <header class="header" data-offline>
+  <h4>Curso JavaScript</h4>
+  <h1>AJAX</h1>
+ </header>
+
+ <section class="plantaDev">
+  <img id="plantaDev" src="assets/dev-plant.jpg" alt="La planta Dev">
+ </section>
+
+ <section class="ajaxDiagram">
+  <img id="ajaxDiagrama" src="assets/ajax.png" alt="Diagrama de Ajax">
+ </section>
+
+ <section class="xhr">
+  <h2>Objeto XMLHttpRequest</h2>
+  <ol id="xhr"></ol>
+ </section>
+
+ <section class="fetch">
+  <h2>API Fetch</h2>
+  <ol id="fetch"></ol>
+ </section>
 
 
- <br><br><br><br><br><br><br><br><br><br><br><br>
+ <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
  <script src="js/ajax.js"></script>
 
