--- a/ajax.html
+++ b/ajax.html
@@ -41,9 +41,25 @@
   <ol id="fetch"></ol>
  </section>
 
+ <section class="fetch-async">
+  <h2>API Fetch + Async-Await</h2>
+  <ol id="fetch-async"></ol>
+ </section>
+
+ <section class="axios">
+  <h2>Axios</h2>
+  <ol id="axios"></ol>
+ </section>
+
+ <section class="axios-async">
+  <h2>Axios + Async-Await</h2>
+  <ol id="axios-async"></ol>
+ </section>
+
 
  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
+ <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
  <script src="js/ajax.js"></script>
 
 </body>
