--- a/ajax-ejercicios/contact-form-php.html
+++ b/ajax-ejercicios/contact-form-php.html
@@ -47,11 +47,19 @@
    object-position: 50% 70%;
   }
 
+  .logo img {
+   width: 5rem;
+   height: auto;
+  }
+
   .header {
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
    position: sticky;
    z-index: 998;
    top: 0;
-   padding: 0 0 0.5rem 0;
+   padding: 0 1rem 0.5rem 1rem;
    background-color: var(--main-color);
    color: var(--second-color);
    transition: all 0.7s ease;
@@ -165,8 +173,13 @@
 <body>
 
  <header class="header">
-  <h4>Curso JavaScript</h4>
-  <h1>Envío de formulario con Fetch y FormSubmit</h1>
+  <article class="logo">
+   <img src="assets/php.png" alt="">
+  </article>
+  <article class="titulo">
+   <h4>Curso JavaScript</h4>
+   <h1>Envío de formulario con Fetch y PHP</h1>
+  </article>
  </header>
 
  <section class="plantaDev">
@@ -262,9 +275,10 @@
 
     $loader.classList.remove("none"); // mostrar animación "cargando"
 
-    fetch("https://formsubmit.co/ajax/mellamanadrian@hotmail.com", {
+    fetch("http://gps.rf.gd/2/ajax-ejercicios/assets/send_mail.php", {
      method: "POST",
-     body: new FormData(e.target) //FormData hace el parseo necesario para incorporar al cuerpo del mensaje. Toma los nombres del los input como nobre de variables y les asigna el valor que el usario ingresó (cada input necesita tener nombre). PARAMETROS: el formulario que origina el evento "submit".
+     body: new FormData(e.target), //FormData hace el parseo necesario para incorporar al cuerpo del mensaje. Toma los nombres del los input como nobre de variables y les asigna el valor que el usario ingresó (cada input necesita tener nombre). PARAMETROS: el formulario que origina el evento "submit".
+     mode: "cors"
     })
      .then(res => res.ok ? res.json() : Promise.reject(res))//En este primer then pasamos la espuesta a json si viene ok, y sino enviamos a catch (Validación)
      .then(json => {
