API WPrest - ScrllInf y Selector ok

--- a/ajax-ejercicios/0.html
+++ b/ajax-ejercicios/0.html
@@ -249,10 +249,13 @@
    </figure>
 
    <figure class="card">
-    <img src="assets/screenshots/zz" alt="zz">
-    <figcaption><a href="zz" target="_blank">API WordPress</a></figcaption>
+    <img src="assets/screenshots/wp-rest-api.jpg" alt="WordPress rest API">
+    <figcaption><a href="wp-api-rest.html" target="_blank">API WordPress</a></figcaption>
     <h4>Técnicas usadas:</h4>
-    <ul></ul>
+    <ul>Fetch</ul>
+    <ul>Scroll Infinito</ul>
+    <ul>Templates</ul>
+    <ul>API WordPress Rest</ul>
    </figure>
 
 
