Router y Refactorizado - hasta v153 ok

--- a/ajax-ejercicios/0.html
+++ b/ajax-ejercicios/0.html
@@ -184,6 +184,7 @@
     <h4>Técnicas usadas:</h4>
     <ul>Fetch + Async await</ul>
     <ul>Template con contenido, forEach y clone. //Explicado en detalle en comentarios</ul>
+    <ul>Uso de data-attribute para guardar ese dato en Local Storage del navegador</ul>
    </figure>
 
    <figure class="card">
