SPA finalizada ok

--- a/ajax-ejercicios/0.html
+++ b/ajax-ejercicios/0.html
@@ -150,13 +150,16 @@
 
    <figure class="card">
     <img src="assets/screenshots/spa.jpg" alt="Single Page Aplication">
-    <figcaption><a href="spa/index.html" target="_blank">Single Page Aplication</a></figcaption>
+    <figcaption><a href="spa/index.html" target="_blank">SPA - Single Page Aplication</a></figcaption>
     <h4>Técnicas usadas:</h4>
     <ul>Códigos html devueltos por función (con forEach) se reúnen (concatenan +=) en una variable y luego se pegan en
      el DOM. No usa Template</ul>
     <ul>AJAX en una función</ul>
     <ul>Contenido 100% dinámico</ul>
     <ul>Scripts en módulos</ul>
+    <ul>Scroll Infinito</ul>
+    <ul>Contact Form</ul>
+    <ul>Insertar estilos por JavaScript - dynamic styles</ul>
    </figure>
 
    <figure class="card">
