--- a/ajax-ejercicios/spa/index.html
+++ b/ajax-ejercicios/spa/index.html
@@ -7,6 +7,8 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="app/assets/style.css">
  <link rel="icon" href="app/assets/favicon.ico">
+ <style id="dynamic-styles"></style>
+ <!-- En esta etiqueta vacía, vendrán los estilos dinámicos provenientes de la var $styles creada con JavaScript -->
 
  <title>Vanilla JS SPA</title>
 </head>
