Reactividad Completa - Fin del curso JS JonMircha

--- a/ajax-ejercicios/0.html
+++ b/ajax-ejercicios/0.html
@@ -163,6 +163,28 @@
    </figure>
 
    <figure class="card">
+    <img src="" alt="Lista tareas basada en estado">
+    <figcaption><a href="../reactividad/01_ui-basada-estado.html" target="_blank">Lista Tareas 01- Reactividad</a>
+    </figcaption>
+    <h4>Técnicas usadas:</h4>
+    <ul>variable state</ul>
+    <ul>template: como función que renderiza la UI según la modificación de state</ul>
+    <ul>funcion render() que pinta este template guardado en otra variable</ul>
+   </figure>
+
+   <figure class="card">
+    <img src="" alt="Lista tareas basada en estado">
+    <figcaption><a href="../reactividad/01_ui-basada-estado.html" target="_blank">Lista Tareas 02 - Reactividad</a>
+    </figcaption>
+    <h4>Técnicas usadas:</h4>
+    <ul>El stado se actualiza de manera reactiva</ul>
+
+    <ul>variable state</ul>
+    <ul>template: como función que renderiza la UI según la modificación de state</ul>
+    <ul>funcion render() que pinta este template guardado en otra variable</ul>
+   </figure>
+
+   <figure class="card">
     <img src="assets/screenshots/api-canciones.jpg" alt="Api Canciones">
     <figcaption><a href="api-canciones.html" target="_blank">Api Canciones</a></figcaption>
     <h4>Técnicas usadas:</h4>
